--- a/_config.yml
+++ b/_config.yml
@@ -8,7 +8,7 @@ middle_name:
 last_name: Chen
 email: jinglinc@illinois.edu
 description: > # the ">" symbol means to ignore newlines until "footer_text:"
-  Homepage of Jinglin Chen. Based on [*folio](https://github.com/bogoli/-folio) design.
+  Homepage of Jinglin Chen.
 footer_text: >
   Powered by <a href="https://jekyllrb.com/" target="_blank">Jekyll</a> with <a href="https://github.com/alshedivat/al-folio">al-folio</a> theme.
   Hosted by <a href="https://pages.github.com/" target="_blank">GitHub Pages</a>.
