--- a/_config.yml
+++ b/_config.yml
@@ -170,6 +170,9 @@ exclude:
   - Gemfile
   - Gemfile.lock
   - vendor
+  - cv.md
+  - projects.md
+  - repositories.md
 keep_files:
   - CNAME
   - .nojekyll
